--- a/03. login-join-app/styles/main.css
+++ b/03. login-join-app/styles/main.css
@@ -2,113 +2,159 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.header {
+  }
+  
+  .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     width: 100%;
+    height: 80px;
     background: #292643;
-}
-
-
-.header .header_inner {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-}
-
-.header .header_util {
-    margin-bottom: 15px;
-}
-
-.header .header_menu {
-
-}
-
-.header .header_util {
-    
-}
-
-.header .header_util > ul{
-    display: flex;
-    align-items: center;
-}
-
-.header .header_util > li{
-    position: relative;
-    display: flex;
-    align-items: center;
-}
-.header .header_gnb {
-    
-}
-
-.header .header
-
-.header .header_gnb > ul {
-    display: flex;
-    align-items: center;
-}
-
-.header .header_gnb > ul > li{
-    padding: 0 25px;
-    color : #fff;
-}
-
-.header .header_gnb > ul > li:last-child{
-    padding-right: 0;
-}
-
-.header .header_gnb > ul > li:hover{
-    text-decoration: underline;
-}
-
-.content .content_page {
-
-    display: none;
-}
-
-.content .content_page.active {
-    display: block;
-}
-
-.footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-}
-
-.footer .footer_inner {
+  }
+  
+  .header .header_inner {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 1280px;
-}
-
-.footer .footer_list {
-    
-}
-.footer .footer_list > ul {
+  }
+  
+  .header .header_menu {
     display: flex;
-}
-.footer .footer_list > ul > li{
-    
-}
-.footer .footer_sns {
-    
-}
-.footer .footer_sns > ul {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  
+  .header .header_util {
+    margin-bottom: 15px;
+  }
+  
+  .header .header_util > ul {
     display: flex;
+    align-items: center;
+  }
+  
+  .header .header_util > ul > li {
+    position: relative;
+    padding: 0 15px;
+    color: #fff;
+  }
+  
+  .header .header_util > ul > li:after {
+    content: "|";
+    position: absolute;
+    right: 0;
+    top: 50%;
+    margin-top: -6px;
+    font-size: 12px;
+    color: #b5b0b0;
+  }
+  
+  .header .header_util > ul > li:last-child {
+    padding-right: 0;
+  }
+  
+  .header .header_util > ul > li:last-child:after {
+    display: none;
+  }
+  
+  .header .header_gnb > ul {
+    display: flex;
+    align-items: center;
+  }
+  
+  .header .header_gnb > ul > li {
+    padding: 0 25px;
+    color: #fff;
+  }
+  
+  .header .header_gnb > ul > li:last-child {
+    padding-right: 0;
+  }
+  
+  .header .header_gnb > ul > li:hover {
+    text-decoration: underline;
+  }
+  
+  .content .content_page {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .content .content_page.active {
+    display: flex;
+  }
+  
+  .content .content_title {
 
-}
+  }
+  
+  .content .content_form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 400px;
+    border: 1px solid #d2cfcf;
+    padding:14px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
+    border-radius: 5px;
+    box-sizing: border-box;
+    
+  }
+  
+  .content .content_form .form_inp i {
+      color: #696363;
+      font-size:14px;
+  }
 
-.footer .footer_sns > ul > li{
-    color:#4e4a4a;
-}
 
-.footer .footer_sns > ul > li i{
-    color:#4e4a4a;
-}
+  .content .content_form .form_inp input {
+      border: none;
+      outline: none;
+      width: 100%;
+      margin-left: 10px;
+      color: #403b3b;
+      font-size: 13px;
+      letter-spacing: 0.5px;
+  }
+  .content .content_btn {
+  }
+  
+  .footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    min-height: 120px;
+    background: #f2f2f2;
+  }
+  
+  .footer .footer_inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 1280px;
+  }
+  
+  .footer .footer_list > ul {
+    display: flex;
+  }
+  
+  .footer .footer_list > ul > li {
+    padding-right: 15px;
+    font-size: 14px;
+  }
+  
+  .footer .footer_sns > ul {
+    display: flex;
+  }
+  
+  .footer .footer_sns > ul > li {
+    padding-left: 20px;
+  }
+  
+  .footer .footer_sns > ul > li i {
+    color: #4e4a4a;
+  }
